kubernetes2.yaml
### Deployments
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapi-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demoapi
  template:
    metadata:
      labels:
        app: demoapi
    spec:
      containers:
      - name: demoapi-container
        image: kubernetestestingsnnr.azurecr.io/demoapi   # Corrected to use the image name "demoapi"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - name: demoapp-container
        image: kubernetestestingsnnr.azurecr.io/demoapp   # Corrected to use the image name "demoapp"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
### Services
apiVersion: v1
kind: Service
metadata:
  name: demoapp-service
spec:
  type: NodePort
  selector:
    app: demoapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30200
---
apiVersion: v1
kind: Service
metadata:
  name: demoapi-service
spec:
  type: NodePort
  selector:
    app: demoapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
    - host: localhost  # Replace with your domain or IP
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: demoapi-service  # Name of your .NET service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp-service  # Name of your Angular service
                port:
                  number: 80
